Add tool support of Java 9